# 50_cpp

./: README.md
code/: CMakeLists.txt  burti1.cpp  burti2.cpp  burti3.cpp  burti4.cpp  burti5.cpp  burti6.cpp  burti7.cpp  cipvirk1.cpp  cipvirk2.cpp  karto_1.cpp  karto_2.cpp  karto_3.cpp  karto_4.cpp  pentamino_1.cpp  pentamino_2.cpp  pentamino_3.cpp  sahs1.cpp  sahs2.cpp  sahs3.cpp  sahs4.cpp  sahs5.cpp  sahs6.cpp  sahs7.cpp  sahs8.cpp  sahs9.cpp
