project(50_cpp)

add_executable(burti_1 burti1.cpp)
add_executable(burti_2 burti2.cpp)
add_executable(burti_3 burti3.cpp)
add_executable(burti_4 burti4.cpp)
add_executable(burti_5 burti5.cpp)
add_executable(burti_6 burti6.cpp)
add_executable(burti_7 burti7.cpp)

add_executable(sahs_1 sahs1.cpp)
add_executable(sahs_2 sahs2.cpp)
add_executable(sahs_3 sahs3.cpp)
add_executable(sahs_4 sahs4.cpp)
add_executable(sahs_5 sahs5.cpp)
add_executable(sahs_6 sahs6.cpp)
add_executable(sahs_7 sahs7.cpp)
add_executable(sahs_8 sahs8.cpp)
add_executable(sahs_9 sahs9.cpp)

add_executable(pentamino_1 pentamino_1.cpp)
add_executable(pentamino_2 pentamino_2.cpp)
add_executable(pentamino_3 pentamino_3.cpp)

add_executable(karto_1 karto_1.cpp)
add_executable(karto_2 karto_2.cpp)
add_executable(karto_3 karto_3.cpp)
add_executable(karto_4 karto_4.cpp)